2005-08-04  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	* GL/Makefile.am:
	* GL/include/Makefile.am:
	* GL/include/GL/Makefile.am:
	* hw/xfree86/os-support/solaris/Makefile.am:
	* hw/xfree86/scanpci/Makefile.am:
	- Bug #3960: Add remaining GLX and pci.ids stuff to DIST
	  (Cha Young-Ho, Olli Helenius)
	- Fix some distcheck problems for non-solaris systems
	- Change server version number from the Xorg rev to an independent one
	- _POSIX_SOURCE and _XOPEN_SOURCE defined to the right values

2005-08-04  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	* GL/mesa/main/Makefile.am:
	- Check for vsnprintf
	- Don't build the Xorg DDX on darwin
	- Workaround for gcc defining __ppc__ but not __powerpc__

2005-08-02  Keith Packard  <keithp@keithp.com>

	* hw/xwin/Makefile.am:
	Mark generated files as BUILT_SOURCES and CLEANFILES
	to ensure they are regenerated after 'make clean' and
	to make parallel builds work right.

2005-08-01  Keith Packard  <keithp@keithp.com>

	* hw/dmx/config/Makefile.am:
	Note yacc and lex generated files as BUILT_SOURCES so
	they are created before anything is compiled; required
	for parallel builds

2005-07-06  Alexander Gottwald  <ago@freedesktop.org>

	* configure.ac:
	* Makefile.am:
	* include/dix-config.h:
	Add more defines for XWin DDX
	Make building of cfb*, afb and mfb conditional
	Set FD_SETSIZE=256 on cygwin
	
2005-07-05  Alexander Gottwald  <ago@freedesktop.org>

	* hw/xwin/Makefile.am:
	Build miinitext.c and fbcmap.c as DDX specific files

	* configure.ac:
	Do not define _POSIX_SOURCE on cygwin.

2005-07-05  Alexander Gottwald  <ago@freedesktop.org>

	* fb/Makefile.am:
	* mi/Makefile.am:
	* xkb/Makefile.am:
	Revert last changes. They have to be addressed in a different way

2005-07-05  Alexander Gottwald  <ago@freedesktop.org>

	* configure.ac:
	* hw/Makefile.am:
	Add XWin DDX, make Xorg DDX conditional
	Make XF86VidMode and XF86Misc conditional

	* include/xwin-config.h.in:
	* hw/xwin/Makefile.am:
	Add XWin DDX
